--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,17 @@
 .conteiner {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+
+    @include for-size(tablet-portrait) {
+        width: 480px;
+    }
+
+    @include for-size(tablet-landscape) {
+        width: 768px;
+    }
+
+    @include for-size(desktop) {
+        width: 1200px;
+    }
 }
