--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,57 +1,37 @@
 
-.hero-title {
-  font-weight: 700;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: $primary-white-color;
-  text-transform: uppercase;
-  margin: 0;
-  margin-bottom: 30px;
-}
+// .hero-title {
+//   font-weight: 700;
+//   font-size: 44px;
+//   line-height: 1.36;
+//   text-align: center;
+//   letter-spacing: 0.06em;
+//   color: $primary-white-color;
+//   text-transform: uppercase;
+//   margin: 0;
+//   margin-bottom: 30px;
+// }
 
-.hero-section {
-  width: 1600px;
-  height: 600px;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../image/hero/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-}
-.hero-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+// .hero-section {
+//   width: 1600px;
+//   height: 600px;
+//   background-image: linear-gradient(
+//       to right,
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url(../image/hero/hero.jpg);
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   background-size: cover;
+//   display: flex;
+// }
+// .hero-container {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-.hero-block {
-  width: 696px;
-  margin: 0 auto;
-}
-
-.hero-btn {
-  display: block;
-  margin: 0 auto;
-  width: 200px;
-  height: 50px;
-  background: $accent-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  outline: none;
-}
-
-.text-btn {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: $primary-white-color;
-}
+// .hero-block {
+//   width: 696px;
+//   margin: 0 auto;
+// }
