--- a/sass/layout/_our-comand.scss
+++ b/sass/layout/_our-comand.scss
@@ -1,4 +1,3 @@
-
 .comand-section {
   background-color: #f5f4fa;
 }
@@ -15,11 +14,6 @@
   margin-bottom: 10px;
 }
 
-.comand-list {
-  display: flex;
-  padding-bottom: 94px;
-}
-
 .profession {
   font-weight: 400;
   font-size: 16px;
@@ -31,12 +25,20 @@
 }
 
 .comand-list-item {
+
+  @include for-size(phone-only) {
+    margin: 0 auto;
+  }
+
+  background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   width: 270px;
+  
   &:not(:last-child) {
-    margin-right: 30px;
+    @include for-size(desktop){
+    margin-right: 30px;}
   }
 }
 
