--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,11 @@
 @import "./utils/normalize";
 @import "./utils/variables";
+@import "./utils/_variables-mixin";
 @import "./base/base";
 @import "./base/container";
 @import "./components/modal-window";
+@import "./components/title";
+@import "./components/buttom";
 
 @import "./layout/header";
 @import "./layout/hero";
